# routes/api.php
@@ -18,12 +18,12 @@ Route::middleware('auth:sanctum')->get('/user', function (Request $request) {
     return $request->user();
 });
 Route::post('login', 'App\Http\Controllers\AuthController@login');
+// Route::get('login', 'App\Http\Controllers\AuthController@index');
 
-
-Route::middleware('jwt.auth')->group(function(){
-    //AQUI SÕ AS ROTAS PROTEGIDAS
-    Route::get('login', 'App\Http\Controllers\AuthController@index');
-});
+// Route::middleware('jwt.auth')->group(function(){
+//     //AQUI SÕ AS ROTAS PROTEGIDAS
+//     // Route::get('login', 'App\Http\Controllers\AuthController@index');
+// });
 
 
 
